[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/scriptv0/script_line.gd" id="1_dhjl1"]

[node name="ScriptLine" type="ScrollContainer"]
clip_contents = false
custom_minimum_size = Vector2(310, 41)
offset_right = 290.0
offset_bottom = 41.0
mouse_filter = 2
vertical_scroll_mode = 3
script = ExtResource("1_dhjl1")

[node name="Line" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="ValidityIndicator" type="ColorRect" parent="Line"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
mouse_filter = 2

[node name="DeleteLineButton" type="Button" parent="Line"]
layout_mode = 2
text = "X"

[node name="Blocks" type="HBoxContainer" parent="Line"]
layout_mode = 2
mouse_filter = 2

[node name="GrowLineButton" type="Button" parent="Line"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "+"

[connection signal="pressed" from="Line/DeleteLineButton" to="." method="_on_delete_line_button_pressed"]
[connection signal="pressed" from="Line/GrowLineButton" to="." method="_on_grow_line_button_pressed"]
